--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
     pull_request:
         branches:
             - master
+        branches-ignore:
+            - dev
     workflow_dispatch:
 ######################
 jobs:
