Update CI workflow to avoid Running workflow on the dev branch v2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,13 @@ run-name: ${{ github.head_ref }} Challenge | ${{ github.event.pull_request.user.
 on:
     pull_request:
         branches:
-            - master
-        branches-ignore:
-            - dev
+            - 'master'
     workflow_dispatch:
 ######################
 jobs:
   test:
     name: 'Test Challenge Structure'
+    if: github.head_ref != 'dev'
     defaults:
       run:
         shell: bash
