Fixed github action workflow v2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ run-name: ${{ github.head_ref }} Challenge | ${{ github.event.pull_request.user.
 on:
     pull_request:
         branches:
-            - '${{ github.event.repository.default_branch }}'
+            - 'main'
     workflow_dispatch:
 ######################
 jobs:
