Updated Gitlab CI/CD workflow v2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ stages:
 
 .standard_rules:
   rules:
-    - if: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME != 'dev'
+    - if: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME == 'dev'
       when: never
       allow_failure: true
 
