Updated Workflow for both gitlab/github

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,7 @@ jobs:
 
 ######################
   check_readme_file_table:
-    name: 'Check Table with Number of Challs'
+    name: 'Check Challs in Readme File'
     if: github.head_ref != 'dev'
     runs-on: ubuntu-latest
     defaults:
